Fixed drag_and_drop and hover issues in firefox browser

--- a/pytest.ini
+++ b/pytest.ini
@@ -1,3 +1,3 @@
 [pytest]
-addopts = --html=reports/report.html --self-contained-html
+addopts = --html=reports/report.html --self-contained-html -v -s
 generate_report_on_test = True
