--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ dependencies = [
     "pytest>=8.3.5",
     "pytest-html>=4.1.1",
     "black>=25.1.0",
+    "pytest-xdist>=3.6.1",
 ]
 readme = "README.md"
 requires-python = ">= 3.8"
