--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ dependencies = [
     "black>=25.1.0",
     "pytest-xdist>=3.6.1",
     "pytest-html-merger>=0.1.0",
+    "beautifulsoup4>=4.13.4",
 ]
 readme = "README.md"
 requires-python = ">= 3.8"
